test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-downstream/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exeter
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-data-sync-delete-downstream-policy
  namespace: exeter
spec:
  rules:
  - name: pol-data-sync-delete-downstream-rule
    match:
      any:
      - resources:
          kinds:
          - Secret
    generate:
      synchronize: true
      apiVersion: v1
      kind: ConfigMap
      name: zk-kafka-address
      namespace: exeter
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
