test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-downstream/04-sleep.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: sleep
spec:
  timeouts: {}
  try:
  - script:
      content: sleep 6
    timeout: 10s
