test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-downstream/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-sync-delete-downstream
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-data-sync-delete-downstream-policy
        - name: namespace
          value: exeter
  - name: step-02
    try:
    - apply:
        file: secret.yaml
    - assert:
        file: generated-configmap.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: zk-kafka-address
          namespace: exeter
  - name: step-04
    try:
    - sleep:
        duration: 5s
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
        timeout: 30s
